Writen a short intro to structure of program

--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -21,5 +21,7 @@
 \input{comet}
 \input{gecode}
 \input{localsolver}
+\section{Structure (or Architecture?) of My Solver}
+\input{structure}
 
 \end{document}
