First outcast of Invariants and oneway made

--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -2,37 +2,45 @@
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
 \usepackage{mathtools}
-\include{style}
+\usepackage{color}
+
+\usepackage{algorithmic}
+\usepackage{algorithm}
 %opening
+
+\include{style}
 \title{A General Purpose Local Search Solver}
 
 
 \begin{document}
 
 \maketitle
+%\newpage
+%\begin{abstract}
 
-\begin{abstract}
-
-\end{abstract}
-
+%\end{abstract}
+%\newpage
 \section{Local Search and Neighbourhoods}
+%\newpage
 \section{Heuristics and Metaheuristics}
-
+%\newpage
 \section{Defenitions of structures in a solver}
 \input{structures}
 \subsection{Invariant}
 \input{invariant}
 \subsection{Oneway Constraints}
 \input{oneway}
+%\newpage
 \section{Existing Solvers}
 \input{comet}
 \input{gecode}
 \input{localsolver}
+%\newpage
 \section{Graph}
 \input{graph}
 \subsection{Creating the Update Graph} \label{updategraph}
 \input{updateCons}
-
+%\newpage
 \section{Structure (or Architecture?) of My Solver}
 \input{structure}
 
