--- a/doc/oneway.tex
+++ b/doc/oneway.tex
@@ -1,4 +1,4 @@
-One way constraints are constraints that is used to define a single variable. The single variable is made as an 
-invariant and can only change when one of the variables or invariants that defines it changes. One way constraints 
-reduces the search space (which should be descussed before this I guess) since the variable defined by a oneway 
-constraint cannot be changed by a move. 
+One-way constraints are constraints that is used to define the value of a single variable. The single variable is made 
+as an \class{invariant} and can only change when one of the variables that defines it changes. One-way 
+constraints reduces the search space \boste{(which should be discussed before this I guess)} since the variable defined 
+by a one-way constraint can only be changed by a move indirectly. 
