--- a/doc/style.tex
+++ b/doc/style.tex
@@ -1,3 +1,15 @@
 \newcommand{\method}[1]{\lstinline[basicstyle=\sffamily]{#1}}
 \newcommand{\interface}[1]{\lstinline[basicstyle=\sffamily]{#1}}
+\newcommand{\class}[1]{\lstinline[basicstyle=\sffamily]{#1}}
+\newcommand{\boste}[1]{{\color{blue}#1}}
+\newcommand{\marco}[1]{{\color{red}#1}}
+\newcommand{\Int}[0]{\textbf{int} }
+\newcommand{\unsigned}[0]{\textbf{unsigned} }
+\newcommand{\Break}[0]{\textbf{break} }
+\newcommand{\var}[0]{\textbf{IntegerVariable} }
+\newcommand{\cons}[0]{\textbf{Constraint} }
+\renewcommand{\thealgorithm}{} % Removes numbering on algorithms
+% Useful commands: 
+% \sum_{\substack{x_i \in X_S\\ c_i \in C_S }}     Creates a sum with multiple argument stacked underneath
+
 
