how to make update graph added to thesis

--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -38,11 +38,12 @@
 %\newpage
 \section{Graph}
 \input{graph}
+\newpage
 \subsection{Creating the Update Graph} \label{updategraph}
 \input{updateCons}
-%\newpage
-\section{Structure (or Architecture?) of My Solver}
-\input{structure}
+\newpage
+%\section{Structure (or Architecture?) of My Solver}
+%\input{structure}
 
 
 \end{document}
