--- a/doc/style.tex
+++ b/doc/style.tex
@@ -8,6 +8,11 @@
 \newcommand{\Break}[0]{\textbf{break} }
 \newcommand{\var}[0]{\textbf{IntegerVariable} }
 \newcommand{\cons}[0]{\textbf{Constraint} }
+\newcommand{\invar}[0]{\textbf{Invariant} }
+\newcommand{\bool}{\textbf{bool }}
+\newcommand{\true}{\textbf{true }}
+\newcommand{\false}{\textbf{false }}
+
 \renewcommand{\thealgorithm}{} % Removes numbering on algorithms
 % Useful commands: 
 % \sum_{\substack{x_i \in X_S\\ c_i \in C_S }}     Creates a sum with multiple argument stacked underneath
