updated main page of thesis

--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -21,20 +21,29 @@
 %\end{abstract}
 %\newpage
 \section{Local Search and Neighbourhoods}
+\subsection{Local Search}
+\subsection{Neighbourhoods}
 %\newpage
 \section{Heuristics and Metaheuristics}
+\subsection{Heuristics}
+\subsection{Metaheuristics}
 %\newpage
 \section{Defenitions of structures in a solver}
 \input{structures}
+\subsection{Moves}
+\subsection{State}
+\subsection{Constriants}
 \subsection{Invariant}
 \input{invariant}
 \subsection{Oneway Constraints}
 \input{oneway}
+\subsection{Metaheuristics implemeted}
 %\newpage
 \section{Existing Solvers}
 \input{comet}
 \input{gecode}
 \input{localsolver}
+%\input{OsCar
 %\newpage
 \section{Graph}
 \input{graph}
@@ -42,6 +51,9 @@
 \subsection{Creating the Update Graph} \label{updategraph}
 \input{updateCons}
 \newpage
+\section{Tests}
+\section{Results}
+\section{Conclusion}
 %\section{Structure (or Architecture?) of My Solver}
 %\input{structure}
 
