--- a/doc/style.tex
+++ b/doc/style.tex
@@ -5,13 +5,16 @@
 \newcommand{\marco}[1]{{\color{red}#1}}
 \newcommand{\Int}[0]{\textbf{int} }
 \newcommand{\unsigned}[0]{\textbf{unsigned} }
-\newcommand{\Break}[0]{\textbf{break} }
+%\newcommand{\bre}[0]{\textbf{break} }
 \newcommand{\var}[0]{\textbf{IntegerVariable} }
 \newcommand{\cons}[0]{\textbf{Constraint} }
 \newcommand{\invar}[0]{\textbf{Invariant} }
 \newcommand{\bool}{\textbf{bool }}
 \newcommand{\true}{\textbf{true }}
 \newcommand{\false}{\textbf{false }}
+\newcommand{\algdata}{\SetKwData{Var}{Variable}\SetKwData{Con}{Constraint}\SetKwInOut{Input}{
+input}\SetKwInOut{Output}{output}\SetKwData{int}{int}\DontPrintSemicolon\SetKwData{Bool}{bool}\SetKwFunction{Sum}{Sum}
+\SetKwFunction{bre}{break}\SetKwFunction{Max}{Max}}
 
 %\renewcommand{\thealgorithm}{} % Removes numbering on algorithms
 % Useful commands: 
