--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -43,7 +43,7 @@
   \input{cons}
     \subsection{Invariants and One-way Constraints}
   \subsection{Types of Modeling \boste{not sure this should be here}}
-  \input{modeling}
+  %\input{modeling}
 
 \section{Different Solvers \boste{properly not the best name}}
   \subsection{Comet}
