--- a/doc/Thesis.tex
+++ b/doc/Thesis.tex
@@ -34,27 +34,27 @@
   \subsubsection{Local Search and Neighborhoods}
   \subsubsection{Metaheuristics}
 
-\section{Modeling}
+\section{Modeling in CBLS}
 %\subsection{Variables}
-
+  \subsection{Types of Modeling \boste{not sure this should be here}}
+  %\input{modeling}
   \subsection{Variables} 
   \input{vars}
   \subsection{Constraints}
   \input{cons}
     \subsection{Invariants and One-way Constraints}
-  \subsection{Types of Modeling \boste{not sure this should be here}}
-  %\input{modeling}
+  
+  
 
-\section{Different Solvers \boste{properly not the best name}}
+\section{Previous Work}
   \subsection{Comet}
 
   \subsection{Gecode}
   \subsection{LocalSolver}
   \subsection{OscaR}
-  \subsection{\boste{This solver} Constraint Based Local Search with Limitations} % GeLS?
+  
 \section{Preprocessing and Simplification}
-  \subsection{Gecode Engine}
-    \subsubsection{Relaxation}
+  \subsection{Domain Reduction}
   \subsection{Initial Solution}
 \section{Structuring Local Search Model}
 \input{strucLS}
@@ -64,7 +64,7 @@
   
 \section{Local Search Engine}
   \subsection{Neighborhoods}
-    \subsubsection{Moves}
+    \subsubsection{Neighborhood Operations}
   \subsection{Metaheuristics}
 \section{Tests}
 \section{Results}
