--- a/doc/style.tex
+++ b/doc/style.tex
@@ -4,14 +4,16 @@
 \newcommand{\boste}[1]{{\textbf{\color{blue}(#1)}}}
 \newcommand{\marco}[1]{{\color{red}#1}}
 \newcommand{\Int}[0]{\textbf{int} }
+\newcommand{\Linear}{\textbf{Linear} }
 \newcommand{\unsigned}[0]{\textbf{unsigned} }
 %\newcommand{\bre}[0]{\textbf{break} }
-\newcommand{\var}[0]{\textbf{IntegerVariable} }
+\newcommand{\var}[0]{\textbf{Variable} }
 \newcommand{\cons}[0]{\textbf{Constraint} }
 \newcommand{\invar}[0]{\textbf{Invariant} }
 \newcommand{\bool}{\textbf{bool }}
 \newcommand{\true}{\textbf{true }}
 \newcommand{\false}{\textbf{false }}
+\newcommand{\Tau}{\mathcal{T}}
 \newcommand{\algdata}{\SetKwData{Var}{Variable}\SetKwData{Con}{Constraint}\SetKwInOut{Input}{
 input}\SetKwInOut{Output}{output}\SetKwData{int}{int}\DontPrintSemicolon\SetKwData{Bool}{bool}\SetKwFunction{Sum}{Sum}
 \SetKwFunction{bre}{break}\SetKwFunction{Max}{Max}}
