--- a/doc/strucLS.tex
+++ b/doc/strucLS.tex
@@ -1,11 +1,12 @@
 Once an initial solution to the problem has been found by Gecode the model is transformed to create a model better 
-suited for local search. The procedure can be split in several steps before the local search can begin. 
+suited for local search. \boste{talk briefly about DDG and propagation queue (what are they used for)} procedure can 
+be split in several steps before the local search can begin. 
 \begin{enumerate}
- \item Try to define integer variables by one-way constraints
- \item Define invariants for the constraints
+ \item Define variables by one-way constraints
+ \item Define invariants for the remaining constraints
  \item Create a dependency directed graph for variables and invariants
  \item Create propagation queue for variables
  \item Initialize the invariants
- \item Initialize the constraints
- \item Initialize the objective function
+% \item Initialize the constraints
+% \item Initialize the objective function
 \end{enumerate}
