--- a/doc/vars.tex
+++ b/doc/vars.tex
@@ -1,7 +1,6 @@
-Models contains variables $V$ that is a n-tuple of variables $V = \langle v_1, v_2, \dots , v_n \rangle $. Each 
-variable $v_i \in V$ has a domain $D(v_i) \in D$ where $D$ is an n-tuple of domains $D = \langle D_1, D_2, \dots , D_n 
-\rangle $ such that $v_i \in D_i$. The variables $v_i \in V$ of the models that will be discussed in this paper all 
-have their domain restricted to $D_i \subseteq \mathbb{Z}\ : \: \forall \ D_i \in D$ \boste{Does not look quite nice 
-}. Hence the all the variables are discrete and can be incremented in small steps. \\
-From now on $y_i \in Y \subseteq V$ will denote integer variable while $x_i \in X \subseteq V$ 
-denotes binary variables. 
+Models contains variables $X$ that is a set of $n$ variables $X = \{ x_1, x_2, \dots , x_n \} $. Each 
+variable $x_i \in X$ has a \emph{domain} $D(x_i) \in D$ where $D$ is an n-tuple of domains $D = \langle D_1, D_2, \dots 
+, D_n 
+\rangle $ such that $x_i \in D_i$. The variables $x_i \in X$ of the models that will be discussed in this thesis all 
+have their domain restricted toa finite descrete domain $D_i \subseteq \mathbb{Z}\ : \: \forall \ D_i \in D$. The value 
+of a variable $x$ is denoted $V(x)$ and we will denote integer variables as $y_i \in Y \subseteq X$. 
